updated the examples w/ gitpod

--- a/examples/axum.mdx
+++ b/examples/axum.mdx
@@ -7,7 +7,9 @@ description:
 
 ## Hello world!
 
-[![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)](https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/axum/hello-world)
+<a href="https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/axum/hello-world">
+  ![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)
+</a>
 
 Simple 'Hello world' app using Axum.
 
@@ -64,7 +66,9 @@ And your app is live! 🎉🎉🎉
 
 ## Websocket
 
-[![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)](https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/axum/websocket)
+<a href="https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/axum/websocket">
+  ![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)
+</a>
 
 A websocket example using Axum.
 
