--- a/examples/poem.mdx
+++ b/examples/poem.mdx
@@ -7,7 +7,9 @@ description:
 
 ## Hello world!
 
-[![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)](https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/poem/hello-world)
+<a href="https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/poem/hello-world">
+  ![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)
+</a>
 
 Simple 'Hello world' app using Poem.
 
@@ -61,7 +63,9 @@ And your app is live! 🎉🎉🎉
 
 ## Todo App (MongoDB)
 
-[![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)](https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/poem/mongodb)
+<a href="https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/poem/mongodb">
+  ![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)
+</a>
 
 Simple 'todo app' example using MongoDB.
 
@@ -178,7 +182,9 @@ And your app is live! 🎉🎉🎉
 
 ## Todo App (Postgres)
 
-[![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)](https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/poem/postgres)
+<a href="https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/poem/postgres">
+  ![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)
+</a>
 
 Simple 'todo app' example using Postgres.
 
