--- a/examples/rocket.mdx
+++ b/examples/rocket.mdx
@@ -7,7 +7,9 @@ description:
 
 ## Hello world!
 
-[![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)](https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/rocket/hello-world)
+<a href="https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/rocket/hello-world">
+  ![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)
+</a>
 
 Simple 'Hello world' app using Rocket.
 
@@ -63,7 +65,9 @@ And your app is live! 🎉🎉🎉
 
 ## JWT Authentication
 
-[![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)](https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/rocket/authentication)
+<a href="https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/rocket/authentication">
+  ![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)
+</a>
 
 This example shows how to use [Rocket request guards](https://rocket.rs/v0.5-rc/guide/requests/#request-guards) for authentication with [JSON Web Tokens](https://jwt.io/) (JWT for short).
 The idea is that all requests authenticate first at https://authentication-rocket-app.shuttleapp.rs/login to get a JWT.
@@ -369,7 +373,9 @@ Since tokens usually have a longer than 5 minutes expiration time, we can create
 
 ## URL Shortener
 
-[![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)](https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/rocket/url-shortener)
+<a href="https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/rocket/url-shortener">
+  ![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)
+</a>
 
 A URL shortener that you can use from your terminal - built with shuttle, rocket and postgres/sqlx.
 
