--- a/examples/serenity.mdx
+++ b/examples/serenity.mdx
@@ -5,7 +5,9 @@ description: "Serenity is a Rust library for the Discord API."
 
 ## Hello world bot
 
-[![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)](https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/serenity/hello-world)
+<a href="https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/serenity/hello-world">
+  ![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)
+</a>
 
 ### Prerequisites
 
@@ -113,7 +115,9 @@ cargo shuttle deploy
 ```
 ## Todo list bot
 
-[![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)](https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/shuttle/postgres)
+<a href="https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/serenity/postgres">
+  ![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)
+</a>
 
 ### Prerequisites
 
