--- a/examples/thruster.mdx
+++ b/examples/thruster.mdx
@@ -1,12 +1,14 @@
 ---
-title: "Tide"
+title: "Thruster"
 description:
   "A fast and intuitive Rust web framework."
 ---
 
 ## Hello world!
 
-[![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)](https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/thruster/hello-world)
+<a href="https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/thruster/hello-world">
+  ![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)
+</a>
 
 Simple 'Hello world' app using Thruster.
 
@@ -70,7 +72,9 @@ And your app is live! 🎉🎉🎉
 
 ## AWS RDS Postgres
 
-[![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)](https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/thruster/postgres)
+<a href="https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/thruster/postgres">
+  ![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)
+</a>
 
 Create a new directory (`mkdir`) and move into it (`cd`) -- afterwards, execute
 the following command to initialize shuttle inside with the Tide boilerplate.
