--- a/examples/warp.mdx
+++ b/examples/warp.mdx
@@ -6,6 +6,10 @@ description:
 
 ## Hello world!
 
+<a href="https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/warp/hello-world">
+  ![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)
+</a>
+
 Simple 'Hello world' app using Warp.
 
 Create a new directory (`mkdir`) and move into it (`cd`) -- afterwards, execute the following command to initialize shuttle inside with the Warp boilerplate.
