--- a/examples/salvo.mdx
+++ b/examples/salvo.mdx
@@ -7,7 +7,9 @@ description:
 
 ## Hello world!
 
-[![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)](https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/salvo/hello-world)
+<a href="https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/salvo/hello-world">
+  ![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)
+</a>
 
 Simple 'Hello world' app using Salvo.
 
