--- a/examples/tide.mdx
+++ b/examples/tide.mdx
@@ -8,7 +8,9 @@ description:
 
 ## Hello world!
 
-[![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)](https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/tide/hello-world)
+<a href="https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/tide/hello-world">
+  ![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)
+</a>
 
 Simple 'Hello world' app using Tide.
 
@@ -58,7 +60,9 @@ And your app is live! 🎉🎉🎉
 
 ## AWS RDS Postgres
 
-[![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)](https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/tide/postgres)
+<a href="https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/tide/postgres">
+  ![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)
+</a>
 
 Create a new directory (`mkdir`) and move into it (`cd`) -- afterwards, execute the following command to initialize shuttle inside with the Tide boilerplate.
 
