--- a/introduction/installation.mdx
+++ b/introduction/installation.mdx
@@ -15,4 +15,4 @@ cargo shuttle login
 ```
 
 Once you've done this, you are good to go! To get up and running, proceed to our
-[Quick Start](introduction/quick-start) page!
+[Quick Start](quick-start) page!
