--- a/introduction/quick-start.mdx
+++ b/introduction/quick-start.mdx
@@ -3,7 +3,7 @@ title: "Quick Start"
 ---
 
 We will assume that you have already installed shuttle. If you haven't, you can
-take a look on how to in our [installation](introduction/installation) section.
+take a look on how to in our [installation](installation) section.
 
 In order to get started quickly, we will be using `axum` for this example.
 
@@ -11,6 +11,11 @@ To initialize your project, simply write:
 
 ```sh
 cargo shuttle init --axum hello-world
+```
+
+To create your project, write:
+```sh
+cargo shuttle project new
 ```
 
 And to deploy it, write:
@@ -22,4 +27,4 @@ cargo shuttle deploy
 And that's... it.
 
 Feel free to build on-top of the generated `hello-world` example or take a stab
-at one of our [examples](examples/axum).
+at one of our [examples](./examples/axum).
