--- a/examples/axum.mdx
+++ b/examples/axum.mdx
@@ -21,7 +21,7 @@ cargo shuttle init --axum
 
 Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
 
-```toml
+```toml Cargo.toml
 [package]
 name = "hello-world"
 version = "0.1.0"
@@ -31,12 +31,12 @@ edition = "2021"
 
 [dependencies]
 axum = "0.5"
-shuttle-service = { version = "0.6.0", features = ["web-axum"] }
+shuttle-service = { version = "0.7.2", features = ["web-axum"] }
 sync_wrapper = "0.1"
 ```
 Your `lib.rs` should look like this:
 
-```Rust
+```Rust lib.rs
 use axum::{routing::get, Router};
 use sync_wrapper::SyncWrapper;
 
@@ -82,22 +82,29 @@ cargo shuttle init --axum
 
 Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
 
-```toml
+```toml Cargo.toml
 [package]
-name = "hello-world"
+name = "websocket"
 version = "0.1.0"
 edition = "2021"
 
 [lib]
 
 [dependencies]
-axum = "0.5"
-shuttle-service = { version = "0.6.0", features = ["web-axum"] }
+axum = { version = "0.5", features = ["ws"] }
+chrono = { version = "0.4", features = ["serde"] }
+futures = "0.3"
+hyper = { version = "0.14", features = ["client", "http2"] }
+hyper-tls = "0.5"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+shuttle-service = { version = "0.7.2", features = ["web-axum"] }
 sync_wrapper = "0.1"
+tokio = { version = "1", features = ["full"] }
 ```
 Your `lib.rs` should look like this:
 
-```Rust
+```rust lib.rs
 // lib.rs
 use std::{sync::Arc, time::Duration};
 
@@ -235,7 +242,7 @@ async fn index() -> Html<&'static str> {
 
 And your `index.html` should look like this:
 
-```html
+```html index.html
 <!-- index.html -->
 <!DOCTYPE html>
 <html lang="en" class="bg-gray-600">
