--- a/examples/poem.mdx
+++ b/examples/poem.mdx
@@ -21,7 +21,7 @@ cargo shuttle init --poem
 
 Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
 
-```toml
+```toml Cargo.toml
 [package]
 name = "hello-world"
 version = "0.1.0"
@@ -31,11 +31,11 @@ edition = "2021"
 
 [dependencies]
 poem = "1.3.35"
-shuttle-service = { version = "0.6.0", features = ["web-poem"] }
+shuttle-service = { version = "0.7.2", features = ["web-poem"] }
 ```
 Your `lib.rs` should look like this:
 
-```Rust
+```Rust lib.rs
 use poem::{get, handler, Route};
 
 #[handler]
@@ -77,7 +77,7 @@ cargo shuttle init --poem
 
 Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
 
-```toml
+```toml Cargo.toml
 [package]
 name = "mongodb-poem-app"
 version = "0.1.0"
@@ -88,13 +88,13 @@ mongodb = "2.3.0"
 poem = "1.3.35"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-shuttle-service = { version = "0.6.0", features = ["web-poem"] }
-shuttle-shared-db = { version = "0.6.0", features = ["mongodb"] }
+shuttle-service = { version = "0.7.2", features = ["web-poem"] }
+shuttle-shared-db = { version = "0.7.2", features = ["mongodb"] }
 ```
 
 Your `lib.rs` should look like this:
 
-```Rust
+```Rust lib.rs
 use mongodb::bson::doc;
 use mongodb::bson::oid::ObjectId;
 use mongodb::{Collection, Database};
@@ -196,7 +196,7 @@ cargo shuttle init --poem
 
 Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
 
-```toml
+```toml Cargo.toml
 [package]
 name = "postgres"
 version = "0.1.0"
@@ -207,14 +207,14 @@ edition = "2021"
 [dependencies]
 poem = "1.3.35"
 serde = "1.0"
-shuttle-service = { version = "0.6.0", features = ["sqlx-postgres"] }
-shuttle-shared-db = { version = "0.6.0", features = ["postgres"] }
+shuttle-service = { version = "0.7.2", features = ["web-poem"] }
+shuttle-shared-db = { version = "0.7.2", features = ["postgres"] }
 sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
 ```
 
 Your `lib.rs` should look like this:
 
-```Rust
+```Rust lib.rs
 use poem::{
     error::BadRequest,
     get, handler,
