--- a/examples/salvo.mdx
+++ b/examples/salvo.mdx
@@ -21,7 +21,7 @@ cargo shuttle init --salvo
 
 Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
 
-```toml
+```toml Cargo.toml
 [package]
 name = "hello-world"
 version = "0.1.0"
@@ -31,11 +31,11 @@ edition = "2021"
 
 [dependencies]
 salvo = "0.34.3"
-shuttle-service = { version = "0.6.0", features = ["web-salvo"] }
+shuttle-service = { version = "0.7.2", features = ["web-salvo"] }
 ```
 Your `lib.rs` should look like this:
 
-```Rust
+```Rust lib.rs
 use salvo::prelude::*;
 
 #[handler]
