--- a/examples/serenity.mdx
+++ b/examples/serenity.mdx
@@ -34,7 +34,7 @@ cargo shuttle init --serenity
 
 Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
 
-```toml
+```toml Cargo.toml
 [package]
 name = "hello-world"
 version = "0.1.0"
@@ -45,13 +45,13 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.62"
 serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
-shuttle-secrets = "0.6.0"
-shuttle-service = { version = "0.6.0", features = ["bot-serenity"] }
+shuttle-secrets = "0.7.2"
+shuttle-service = { version = "0.7.2", features = ["bot-serenity"] }
 tracing = "0.1.35"
 ```
 Your `lib.rs` should look like this:
 
-```Rust
+```Rust lib.rs
 use anyhow::anyhow;
 use serenity::async_trait;
 use serenity::model::channel::Message;
@@ -101,7 +101,7 @@ async fn serenity(
 ```
 And your `Secrets.toml` file should look like this (and have your token inside):
 
-```toml
+```toml Secrets.toml
 DISCORD_TOKEN = 'the contents of my discord token'
 ```
 
@@ -153,7 +153,7 @@ cargo shuttle init --serenity
 
 Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
 
-```toml
+```toml Cargo.toml
 [package]
 name = "serenity-postgres"
 version = "0.1.0"
@@ -165,15 +165,15 @@ edition = "2021"
 anyhow = "1.0.62"
 serde = "1.0"
 serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
-shuttle-secrets = "0.6.0"
-shuttle-service = { version = "0.6.0", features = ["bot-serenity"] }
-shuttle-shared-db = { version = "0.6.0", features = ["postgres"] }
+shuttle-secrets = "0.7.2"
+shuttle-service = { version = "0.7.2", features = ["bot-serenity"] }
+shuttle-shared-db = { version = "0.7.2", features = ["postgres"] }
 sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
 tracing = "0.1.35"
 ```
 Your `lib.rs` should look like this:
 
-```Rust
+```Rust lib.rs
 // lib.rs
 use anyhow::Context as _;
 use serenity::async_trait;
@@ -334,7 +334,7 @@ async fn serenity(
 
 Your `db.rs` should look like this:
 
-```rust
+```rust db.rs
 // db.rs
 use sqlx::{FromRow, PgPool};
 use std::fmt::Write;
@@ -393,7 +393,7 @@ pub(crate) async fn list(pool: &PgPool, user_id: i64) -> Result<String, sqlx::Er
 ```
 Your `schema.sql` should look like this:
 
-```sql
+```sql schema.sql
 DROP TABLE IF EXISTS todos;
 
 CREATE TABLE todos (
@@ -404,7 +404,7 @@ CREATE TABLE todos (
 ```
 And your `Secrets.toml` should look like this (make sure to replace the default values):
 
-```toml
+```toml Secrets.toml
 DISCORD_TOKEN = 'the contents of my discord token'
 GUILD_ID = "123456789"
 ```
