--- a/examples/tower.mdx
+++ b/examples/tower.mdx
@@ -21,7 +21,7 @@ cargo shuttle init --tower
 
 Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
 
-```toml
+```toml Cargo.toml
 [package]
 name = "hello-world"
 version = "0.1.0"
@@ -31,12 +31,12 @@ edition = "2021"
 
 [dependencies]
 hyper = { version = "0.14", features = ["full"] }
-shuttle-service = { version = "0.6.0", features = ["web-tower"] }
+shuttle-service = { version = "0.7.2", features = ["web-tower"] }
 tower = { version = "0.4", features = ["full"] }
 ```
 Your `lib.rs` should look like this:
 
-```Rust
+```Rust lib.rs
 use std::convert::Infallible;
 use std::future::Future;
 use std::pin::Pin;
