edit the shuttle-commands.mdx formatting was off

--- a/resources/shuttle-commands.mdx
+++ b/resources/shuttle-commands.mdx
@@ -2,8 +2,8 @@
 title: "Shuttle Commands"
 ---
 
-Before starting to use Shuttle services it is important to get to know its different commands.
-To access the different shuttle commands you have to type in the following command:
+Before using the shuttle services it is important to get to know its different commands.
+To access the different shuttle commands you have to type in the following command in the directory where shuttle was installed:
 ```
 cargo shuttle help
 ```
