refactor: fix link to examples doc

--- a/introduction/quick-start.mdx
+++ b/introduction/quick-start.mdx
@@ -27,4 +27,4 @@ cargo shuttle deploy
 And that's... it.
 
 Feel free to build on-top of the generated `hello-world` example or take a stab
-at one of our [examples](./examples/axum).
+at one of our [examples](../examples/axum).
