Updated the URL shortner

--- a/tutorials/url-shortener.mdx
+++ b/tutorials/url-shortener.mdx
@@ -99,6 +99,11 @@ framework do I want to use? I think I'm going to go with Rocket (opens new
 window). It's pretty much production ready with a sweet API and I'm reasonably
 proficient with it.
 
+Before deploying the app we have to create a new shuttle project which is done as follows
+```
+cargo shuttle project new
+```
+
 Luckily shuttle have created this boilerplate main function that will install and initialize the hello world rocket app
 directly. Simpy type in the following
 
