feat: add section on telemetry in shuttle apps

--- a/introduction/shuttle-commands.mdx
+++ b/introduction/shuttle-commands.mdx
@@ -10,7 +10,7 @@ cargo shuttle help
 ```
 
 ## Commands
-> Tip: Run a command with the `--help` flag to see available subcommands
+*Tip: Run a command with the `--help` flag to see available subcommands*
 
 | Command    |                      Explanation                          |
 |----------  |--------------                                             |
