--- a/introduction/telemetry.mdx
+++ b/introduction/telemetry.mdx
@@ -19,7 +19,7 @@ in your project is add it to your `Cargo.toml`.
 ## Setting Log Level
 
 The global subscriber has an `env_filter` which defaults to the `DEBUG` log level. You can change the log level for local runs
-with `RUST_LOG="<crate-name>"=trace cargo shuttle run`, but do not currently allow changing the log level for production deployments.
+with `RUST_LOG="<crate-name>"=trace cargo shuttle run`, but we do not currently allow changing the log level for production deployments.
 
 ## Viewing Logs
 
