--- a/resources/shuttle-secrets.mdx
+++ b/resources/shuttle-secrets.mdx
@@ -12,8 +12,8 @@ Next, pass `#[shuttle_secrets::Secrets] secret_store: SecretStore` as an argumen
 `SecretStore::get` can now be called to retrieve your API keys and other secrets at runtime.
 
 ## Example
-
 This snippet shows a shuttle rocket main function that uses the `shuttle_secrets::Secrets` attribute to gain access to a `SecretStore`.
+
 ```rust lib.rs
 #[shuttle_service::main]
 async fn rocket(
@@ -29,7 +29,8 @@ async fn rocket(
     let state = MyState { secret };
     let rocket = rocket::build().mount("/", routes![secret]).manage(state);
 
-    Ok(rock
+    Ok(rocket)
+}
 ```
 
-An example using the Rocket framework can be found on [GitHub](https://github.com/shuttle-hq/examples/tree/main/rocket/secrets)
+The full example can be found on [GitHub](https://github.com/shuttle-hq/examples/tree/main/rocket/secrets)
