--- a/tutorials/authentication.mdx
+++ b/tutorials/authentication.mdx
@@ -415,8 +415,6 @@ handlers to the router by adding it to the chain:
 Once signed up, we want to save the logged-in state. We don't want the user to
 have to send their username and password for every request they make.
 
-
-
 ### Cookies and session tokens
 
 Cookies help store the state between browser requests. When a response is sent
@@ -477,18 +475,18 @@ async fn axum(
 
 ### Adding sessions to signup
 
-We also have to create the Sessions table using SQL, the code is as follows:
-```bash
+As well as creating a user on signup, we will create the session token for the
+newly signed-up user. First we have to create the sessions table, we can add the
+following to our `schema.sql`:
+
+```sql
 CREATE TABLE IF NOT EXISTS sessions (
     session_token BYTEA PRIMARY KEY,
     user_id integer REFERENCES users (id) ON DELETE CASCADE
 );
 ```
 
-
-
-As well as creating a user on signup, we will create the session token for the
-newly signed-up user. We post it to the table with our `user_id`
+Then we create a function to create and insert the session:
 
 ```rust
 type Random = Arc<Mutex<ChaCha8Rng>>;
