--- a/examples/custom-service.mdx
+++ b/examples/custom-service.mdx
@@ -1,34 +1,47 @@
 ---
 title: "Custom Service"
-description:
-  "Creating a custom service using Rust and shuttle"
 ---
 
-This section will explain how to create a custom shuttle service using rust.
+This section will explain how to create a custom shuttle service. To do this we need 
+to return a struct from our `shuttle_service::main` function that implements `shuttle_service::Service`.
 
-Let us start by importing the needed libraries.
+In this simple example we will implement `Service` for a `PgPool`, that will simply return 'Hello world'
+from the database on startup. In Rust we can't implement foreign traits for foreign types, so we have 
+to create a wrapper around our `PgPool`.
 
-```
-use shuttle_service::error::CustomError;
-use shuttle_service::Service;
-use sqlx::PgPool;
-
-```
-
-After importing the libraries we will be creating a Pool Service structure. The code is as follows:
-
-```
+```rust
 struct PoolService {
-    pool: PgPool,
+    pool: sqlx::PgPool,
 }
 ```
 
-Then we will be creating a function that implements the shuttle service main function. The code is as follows:
+Then we need to implement `shuttle_service::Service` for our wrapper. If you need to bind to an address,
+for example if you're implementing service for an HTTP server, you can use the `addr` argument from `bind`.
+You can only have one HTTP service bound to the `addr`, but you can start other services that don't rely on 
+binding to a socket. A common usecase is starting an HTTP server like `axum`, alongside a `serenity` bot 
+that doesn't need to bind to a socket. Then you would include both in the same wrapper struct, and start 
+them as normal in the `bind` function.
 
+```rust lib.rs
+#[shuttle_service::async_trait]
+impl shuttle_service::Service for PoolService {
+    async fn bind(
+        mut self: Box<Self>,
+        _addr: std::net::SocketAddr,
+    ) -> Result<(), shuttle_service::error::Error> {
+        self.start().await?;
+
+        Ok(())
+    }
+}
 ```
+
+To finish up, we return the wrapper struct from our `shuttle_service::main` function:
+
+```rust lib.rs
 #[shuttle_service::main]
 async fn init(
-    #[shuttle_shared_db::Postgres] pool: PgPool,
+    #[shuttle_shared_db::Postgres] pool: sqlx::PgPool,
 ) -> Result<PoolService, shuttle_service::Error> {
     Ok(PoolService { pool })
 }
@@ -47,19 +60,8 @@ impl PoolService {
 }
 ```
 
-Finally, we will create a function that implements ```shuttle_service::Service``` and returns a struct.
+Try it out with the `run` command:
 
-```
-#[shuttle_service::async_trait]
-impl Service for PoolService {
-    async fn bind(
-        mut self: Box<Self>,
-        _: std::net::SocketAddr,
-    ) -> Result<(), shuttle_service::error::Error> {
-        self.start().await?;
-
-
-        Ok(())
-    }
-}
+```bash
+cargo shuttle run
 ```
